--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ tensorflow = "^2.16.1"
 python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
-isort = "^5.13.2"
+matplotlib = "^3.8.4"
 
 [tool.ruff]
 exclude = [
