--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "dl-demo"
+name = "butcher"
 version = "0.2.0"
-description = "深度学习DEMO"
+description = "深度学习入门项目"
 authors = ["Yang Li <gmdzy2010@126.com>"]
 readme = "README.md"
 package-mode = false
